--- a/scheme/test.css
+++ b/scheme/test.css
@@ -39,8 +39,15 @@ pre {
 
 .color-swatch {
   display: inline-block;
-  width: 10px;
-  height: 10px;
+  width: 14px;
+  height: 14px;
   border: 1px solid #CCC;
   background-color: black;
+  vertical-align: middle;
+}
+
+.color-value {
+  width: 100px;
+  border: 1px solid #ccc;
+  margin: 0px 5px;
 }
