--- a/scheme/test.css
+++ b/scheme/test.css
@@ -3,6 +3,17 @@ body {
   color: #333;
 }
 
+header {
+  text-align: center;
+  padding: 20px 0;
+  color: #333;
+}
+
+#container {
+  width: 1000px;
+  margin: 0 auto;
+}
+
 .color-swatch {
   width: 50px;
   height: 50px;
@@ -18,7 +29,7 @@ pre {
 }
 
 .sample code {
-  font-family: Lucida Grande, sans-serif !important;
+  font-family: monospace !important;
 }
 
 #samples {
