--- a/scheme/test.css
+++ b/scheme/test.css
@@ -1,12 +1,19 @@
 body {
   font-family: Helvetica Neue, Helvetica, sans-serif;
-  color: #333;
+  color: #222;
 }
 
 header {
   text-align: center;
   padding: 20px 0;
-  color: #333;
+  font-size: 20px;
+  font-weight: bold;
+  color: #444;
+}
+
+footer {
+  text-align: center;
+  padding-top: 40px;
 }
 
 #container {
